Fix: adjust positioning of .about section for improved layout on smaller screens

--- a/css/media-part-3.css
+++ b/css/media-part-3.css
@@ -334,7 +334,11 @@
         top: 100px !important;
     }
 }
-
+@media (max-width: 440px) {
+    .about::after {
+        top: 40px !important;
+    }
+}
 @media (max-width: 425px) {
     .about::after {
         top: 259px;
